# PokerGTO

./: .descriptions.xml  DuplicatedCode.xml  DuplicatedCode_aggregate.xml  Evolution.py  GrazieInspection.xml  HtmlDeprecatedAttribute.xml  HtmlUnknownTarget.xml  HttpUrlsUsage.xml  PyArgumentListInspection.xml  PyAttributeOutsideInitInspection.xml  PyListCreationInspection.xml  PyMethodMayBeStaticInspection.xml  PyMethodOverridingInspection.xml  README.md  SpellCheckingInspection.xml  UnsatisfiedRequirementInspection.xml  calculate.py  config.py  create_project_structure.ps1  index.html  play.py  poker_qt_gui.py  pyproject.toml  requirements.txt  setup.py  simplified_calculate.py  train.py
models/adaptive_model/checkpoint_290000/: drm_model.pkl
models/drm_model/checkpoint_100/: simplified_drm_model.pkl
models/drm_model/checkpoint_1000/: simplified_drm_model.pkl
models/drm_model/checkpoint_2000/: simplified_drm_model.pkl
models/drm_model/checkpoint_3000/: simplified_drm_model.pkl
models/drm_model/checkpoint_4000/: simplified_drm_model.pkl
src/: __init__.py
src/PokerGTO.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/algorithms/: __init__.py  collaborative_drm.py  discounted_regret.py  discounted_regret_gpu.py  simplified_drm.py
src/api/: __init__.py  slumbot.py
src/engine/: __init__.py  evaluator.py  game_state.py  rules.py
src/interface/: __init__.py  main_window.py  tooltips.py
src/utils/: __init__.py  cuda_utils.py  knowledge_transfer.py  logging.py  terminology.py  visualization.py
tests/: test_algorithms.py  test_api.py
(+6 files in other folders)
